# rust_project_complete

./: .rustfmt.toml  Cargo.toml  README.md  Rust-Projekt_mit_100%_Testabdeckung-Vollständiger_Prompt.md  clippy.toml  review_pass_through_project.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
examples/: advanced_usage.rs  basic_usage.rs
src/: lib.rs  main.rs
src/modules/: core.rs  error.rs  mod.rs  utils.rs
tests/: integration_tests.rs
tests/common/: mod.rs
